# tormach-cam

./: .gitignore  README.md  pyproject.toml
src/tormachcam/: __init__.py  __main__.py  app.py
src/tormachcam/config/: defaults.py  machine_profiles.py  settings.py
src/tormachcam/core/: job.py  model.py  operation.py  recommend.py  slicer.py  stock.py  tool.py  units.py
src/tormachcam/core/toolpath/: __init__.py  base.py  finishing.py  roughing.py  utils.py
src/tormachcam/gcode/: gcode_writer.py  pathpilot.py  validate.py
src/tormachcam/gui/: main_window.py  viewport.py  workers.py
src/tormachcam/gui/panels/: gcode_panel.py  model_panel.py  operation_panel.py  tool_panel.py
tests/: test_gcode.py  test_recommend.py  test_slicer.py  test_toolpath.py  test_units.py  test_validate.py
