[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tormachcam"
version = "0.1.0"
description = "CNC G-code generator for Tormach mills (PathPilot-compatible)"
requires-python = ">=3.9"
dependencies = [
    "trimesh>=4.0",
    "shapely>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "PyQt6>=6.6",
    "pyvistaqt>=0.11",
    "pyvista>=0.43",
    "networkx>=3.0",   # trimesh dependency
    "rtree>=1.0",      # shapely spatial indexing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
gui = [
    "PyQt6>=6.6",
    "pyvistaqt>=0.11",
    "pyvista>=0.43",
]

[project.scripts]
tormachcam = "tormachcam.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
